fixed color in contact me on mobile

--- a/my-projectnew/app/globals.css
+++ b/my-projectnew/app/globals.css
@@ -5,9 +5,11 @@
 .light {
     --background: #e5e5e5;
     --text-primary: black;
+    --text-secondary: black;
 }
 
 .dark {
     --background: #202c34;
     --text-primary: white;
+    --text-secondary: black;
 }
